Description and title tags a

--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ a:hover{color: #f14e32;}
 
 /* Bordas */
 .bb1{border-bottom: 1px solid #d8d7cf;}
+.bt1{border-top: 1px solid #d8d7cf;}
 
 /* Padding */
 .pb15{padding-bottom: 15px;}
