--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ h1{font-size: 45px;}
 header h3{font-size: 25px;}
 h3{font-size: inherit;line-height: inherit; margin: inherit;}
 h4{font-size: 18px;color: #f14e32;font-weight: bold;}
+h5{color: #0388a6;font-weight: bold;}
 
 a{color: #413932;}
 a:hover{color: #f14e32;}
