--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ nav .nav>.active>ul {display: block;}
 nav .nav .nav {display: none;padding-bottom: 10px;}
 nav .nav>.active>a, .nav>.active:hover>a, .nav>.active:focus>a {font-weight: bold;background-color: transparent;}
 nav .nav-pills>li.active>a, .nav-pills>li.active>a:hover, .nav-pills>li.active>a:focus{background-color: inherit; color: #f14e32;}
+nav .nav>li>a:hover, .nav>li>a:focus{background-color: transparent;}
 
 .install{background: url(img/setup-sm.png) no-repeat center left;}
 .project{background: url(img/projects-sm.png) no-repeat center left;}
