[+] Fix soft color tah a.

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ h3{font-size: inherit;line-height: inherit; margin: inherit;}
 h4{font-size: 18px;color: #f14e32;font-weight: bold;}
 h5{color: #0388a6;font-weight: bold;}
 
-a{color: #413932;}
+a{color: #423a33;}
 a:hover{color: #f14e32;}
 
 /* Margens */
